syntax = "proto3";
option java_multiple_files = true;
option java_package = "ecommerce";

message SLoginRequest {
  string username = 1;
  string password = 2;
}

message SLoginResponse {
  string loginStatus = 3;
}

message SCreateAccountRequest {
  string username = 4;
  string password = 5;
}

message SCreateAccountResponse {
  string createAccountStatus = 6;
}

message SLogoutRequest {
  uint64 sellerId = 7;

}

message SLogoutResponse {
  string logoutStatus = 8;
}

message SRatingRequest {
  uint64 sellerId = 9;
}

message SRatingResponse {
  string rating = 10;
}


service SellerG {
  rpc sellerLogin(SLoginRequest) returns (SLoginResponse);
  rpc createSellerAccount(SCreateAccountRequest) returns (SCreateAccountResponse);
  rpc logoutSeller(SLogoutRequest) returns (SLogoutResponse);
  rpc sellerRating(SRatingRequest) returns (SRatingResponse);
}